# handy

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .yamllint-config.yaml  Dockerfile  Makefile  README.md  ball_dataset_side_1.dvc  config.json  creator.py  docker-compose.yaml  entrypoint.bash  lint.bash  requirements.txt  research.ipynb  start-container.sh  triangulation_pipeline.bash
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_check.yml  codestyle_check.yml  format.yml  lint.yml  test.yml  test_and_lint.yml
bags/: .gitignore  mono_calib.dvc  stereo_calib.dvc  stereopair_calib.dvc
cv_trainer/: train.py
cv_trainer/augmentations/: MaskSafeRandomCrop.py  __init__.py  base.py  sample.py  sequential.py
cv_trainer/dataset/: DetectionDataset.py  SegmentationDataset.py  __init__.py
cv_trainer/loss/: __init__.py  detection_loss.py
cv_trainer/metrics/: __init__.py  iou.py
cv_trainer/models/: __init__.py  baseline.py
cv_trainer/trainer/: trainer.py
cv_trainer/utils/: dataset_utils.py  object_loading.py  parse_config.py  util.py  wandb.py
datasets/: .gitignore  README.md  annotated_12_02_23.dvc  ball_dataset_side_1.dvc  ball_dataset_side_2.dvc  lab_16_04_24.dvc  main_dataset_30_04_24.dvc  test_set.dvc
datasets/TableMulticolorRecord_19_04/: .gitignore  green_dark_6ms.dvc  green_light_6ms.dvc  orange_dark_6ms.dvc  orange_light_6ms.dvc  white_dark_6ms.dvc  white_light_6ms.dvc
datasets/TableOrange2msRecord_22_04/: .gitignore  README.md  calibration_boards.dvc  camera_params.yaml  orange_dark_2ms.dvc  orange_light_2ms.dvc  sorted_frames.dvc
detection/: .gitignore  README.md  datasets.py  detection-resnet34.ckpt.dvc  inference.py  model.py  requirements.txt  speed_test.py  train.py
docker/: handy-amd64.dockerfile  handy-jetson.dockerfile
docs/: Makefile
docs/tex/: ball_dynamics.tex  handy.tex
handy/src/detector/: CMakeLists.txt  package.xml  seg_model.pth
handy/src/detector/src/: detector.cpp  main.cpp  rs2_node.cpp
handy/src/detector_node/: CMakeLists.txt  ball_detector.cpp  package.xml
handy/src/rs2_node/: CMakeLists.txt  image_publisher.cpp  package.xml
handy/src/rs2_node/src/: main.cpp
launch/: bridge.yaml  camera.yaml
models/: ball_friction.world
models/ball/: model.config  model.sdf
scripts/camera_identifier/: CMakeLists.txt  execute.sh
scripts/camera_identifier/src/: identifier.cpp
segmentation/: dataset.py  inference.py  loss.py  train.py
segmentation/models/: __init__.py  unet.py
training/localisation/: .gitignore  TTNetWithProb.ckpt.dvc  datasets.py  inference.py  model.py  train.py  transfer.py  utils.py
