<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>rs2_node</name>
 <version>1.0.0</version>
 <description>Publishes BoundingBox message containing bounding box for a ping-pong ball. </description>
 <maintainer email="danny.paleyev@gmail.com">Daniel Paleyev</maintainer>
 <license>None</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>rclcpp</depend>
 <depend>sensor_msgs</depend>
 <depend>OpenCV</depend>
 <depend>cv_bridge</depend>
 <depend>realsense2</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>